# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  17 Oct 2007; Andrew Gaffney <agaffney@gentoo.org> arch/ppc.py,
  arch/sparc.py, arch/x86.py:
  look for linux32 in /bin and /usr/bin

  12 Oct 2007; Andrew Gaffney <agaffney@gentoo.org>
  modules/generic_stage_target.py:
  make error message more specific when removing immutable flag

  11 Oct 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  examples/livecd-stage2_template.spec, modules/generic_stage_target.py:
  Added Andrew Gaffney to maintainer list, fixed a typo, updated copyright
  information, and added a small fix for FreeBSD for bug #169041. This is
  catalyst 2.0.5_pre4 for testing.

  11 Oct 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Adding a slightly modified version of Andrew Gaffney's <agaffney@gentoo.org>
  patch from bug #120076 to add cross-compiling support to our distcc
  configuration.

  11 Oct 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Added a version of get_libdir from multilib.eclass so we can determine where
  to go poking around if we need to touch anything in libdir.

  11 Oct 2007; Andrew Gaffney <agaffney@gentoo.org> catalyst:
  print an error saying what target failed before the traceback

  25 Sep 2007; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst_support.py:
  when parsing make.conf, first try pkgcore's
  snakeoil.fileutils.read_bash_dict(), then portage's
  portage_util.getconfig(), then the internal parse_makeconf()

  06 Sep 2007; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst_support.py:
  raise an exception in parse_spec() if there's a duplicate key in the spec

  06 Sep 2007; Andrew Gaffney <agaffney@gentoo.org>
  examples/netboot_template.spec, examples/tinderbox_template.spec,
  modules/grp_target.py, modules/tinderbox_target.py:
  remove redundant set_pkgcache_path() functions from tinderbox and grp modules