@@ -2,6 +2,10 @@
 
 . /tmp/chroot-functions.sh
 update_env_settings
-cleanup_distcc
+
+if [ -n "${clst_DISTCC}" ]
+then
+	cleanup_distcc
+fi
 
 gconftool-2 --shutdown
